// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Conveyor should render correctly when off 1`] = `
<div>
  <div
    class="conveyor"
  >
    <svg>
      conveyor.svg
    </svg>
  </div>
</div>
`;

exports[`Conveyor should render correctly when on 1`] = `
<div>
  <div
    class="conveyor"
  >
    <svg
      class="sc-AxjAm jhTbDC"
    >
      conveyor.svg
    </svg>
  </div>
</div>
`;
